--- a/index.css
+++ b/index.css
@@ -1,2 +1,5 @@
- .slides article   { background-image:none !important; background-color:white;}
+ .slides article   { background-image:none !important; background-color:#F88017  !important;  font-size:40px !important; font-family: 'Montserrat', sans-serif !important}
+ .slides article h1  {font-size:80px !important; color:white !important;}
 
+ .slides article.manifesto  {background-image:url("images/background.jpg")  !important;  background-size: 800px 600px !important; 
+    background-repeat: no-repeat;}
