--- a/io-2012-slides/theme/css/default.css
+++ b/io-2012-slides/theme/css/default.css
@@ -149,6 +149,10 @@ slides > slide {
   background-color:#F88017  !important;  font-size:40px !important; font-family: 'Montserrat', sans-serif !important
 }
 
+slides > slide h1 {
+  font-size:100px !important; font-family: 'Lobster Two', cursive; color:black !important;
+}
+
 slides > slide h2 {
   font-size:100px !important; font-family: 'Montserrat', cursive; color:black !important; color:white !important;
 }
@@ -156,6 +160,9 @@ slides > slide h2 {
 slides > slide h3 {
   font-size:100px !important; font-family: 'Lobster Two', cursive; color:black !important;
 }
+
+slides > slide.reverse { background:white !important; }
+slides > slide.reverse  h2 { color: #F88017 !important ; }
 
 p {
   font-size:50px !important; font-family: 'Montserrat', cursive; color:white !important;
@@ -472,13 +479,13 @@ a:hover {
 
 /* line 276, ../scss/default.scss */
 h1, h2, h3 {
-  font-weight: 600;
 }
 
 /* line 280, ../scss/default.scss */
 h2 {
   font-size: 45px;
   letter-spacing: -2px;
+  line-height: 80%;
   color: #515151;
 }
 
