--- a/io-2012-slides/theme/css/default.css
+++ b/io-2012-slides/theme/css/default.css
@@ -1253,7 +1253,7 @@ article.smaller q:before, article.smaller q:after {
 
 /* line 826, ../scss/default.scss */
 .thank-you-slide {
-  background: #4387fd !important;
+  background: #F88017 !important;
   color: white;
 }
 /* line 830, ../scss/default.scss */
